# shorter

./: .gitignore  Cargo.toml  README.md  package.json  wrangler.toml
.github/workflows/: deploy.yml  wrangler.yml
director/: .gitignore  bindings.d.ts  build.mjs  package.json  wrangler.toml
director/src/: index.ts  link.ts
manage/: .eslintignore  .eslintrc  .gitignore  package.json  reactShims.ts  remix.config.js  server.ts  tailwind.config.js  wrangler.toml
manage/app/: entry.client.tsx  entry.server.tsx  root.tsx
manage/app/components/: DeleteButton.tsx  Form.tsx  Layout.tsx  NotFound.tsx  Row.tsx
manage/app/lib/: createEmotionCache.ts  types.ts  validate.ts
manage/app/routes/: index.tsx  new.tsx
manage/app/routes/links/: $slug.edit.tsx  $slug.rename.tsx  $slug.tsx
src/: lib.rs  link.rs  utils.rs
src/ui/: api.rs  mod.rs  templates.rs
templates/: 404.html  base.html  index.html  link.html
