[package]
name = "shorter"
version = "0.1.0"
description = "A simple link shortener built on Cloudflare Workers"
authors = ["Alex Krantz <alex@krantz.dev>"]
license = "Apache 2.0"
repository = "https://github.com/WaffleHacks/shorter.git"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
cfg-if = "0.1.2"
worker = "0.0.7"
serde = "1"
serde_json = "1"
url = { version = "2.2.2", features = ["serde"] }
askama = "0.10"
matchit = "0.4.4"
regex = "1.5.4"
lazy_static = "1.4.0"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
